--- a/etc/snippets/config/web.xml
+++ b/etc/snippets/config/web.xml
@@ -6,52 +6,11 @@
 	
 	<display-name>issuetracker</display-name>
 	
-	<!-- ******************************************************* -->
-	<!-- Configuracao do Spring -->
-	<!-- ******************************************************* -->
+	<listener>  
+    	<listener-class>org.apache.webbeans.servlet.WebBeansConfigurationListener</listener-class>  
+   </listener> 
 	
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>
-			/WEB-INF/config/spring/applicationContext.xml,
-			/WEB-INF/config/spring/applicationContext-persistence.xml
-		</param-value>
-	</context-param>
 	
-	<listener>
-		<listener-class>
-			org.springframework.web.context.ContextLoaderListener
-		</listener-class>
-	</listener>
-	
-	<!-- RequestContextListener listener enables spring scopes with @Scope annotation -->
-	<listener>
-		<listener-class>
-			org.springframework.web.context.request.RequestContextListener
-		</listener-class>
-	</listener>
-	
-	<!-- Spring (Jpa Support) - OpenEntityManagerInViewFilter -->
-	<filter>
-		<description>
-			Necessário para o Lazy Loading funcionar quando as entidades
-			gerenciadas pelo EntityManager forem utilizadas em
-			ManagedBeans ou em JSPs.
-
-			Um bean com o id 'entityManagerFactory' precisa existir no
-			applicationContext.xml. Se precisar pode ser informado um
-			parâmetro no filtro para indicar qual o id do bean é o
-			EntityManagerFactory. (Ver documentação do Spring)
-		</description>
-		<filter-name>oemiv</filter-name>
-		<filter-class>
-			org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter
-		</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>oemiv</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
 	
 	<!-- ******************************************************* -->
 	<!-- Configuracao do JSF -->
