--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -6,10 +6,12 @@
 	
 	<display-name>issuetracker</display-name>
 	
-	
-	<listener>  
-    	<listener-class>org.apache.webbeans.servlet.WebBeansConfigurationListener</listener-class>  
-   </listener> 
+	<resource-ref>
+        <description>DB Connection</description>
+        <res-ref-name>java:comp/env/issueDS</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 
 	<context-param>
 		<param-name>javax.faces.CONFIG_FILES</param-name>
@@ -47,6 +49,13 @@
 		<param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
 		<param-value>true</param-value>
 	</context-param>
+	
+	<listener>
+        <listener-class>
+            org.apache.myfaces.extensions.cdi.openwebbeans.startup.WebBeansAwareConfigurationListener
+        </listener-class>
+    </listener>
+    
 	
 	<!-- Faces Servlet -->
 	<servlet>
