- dependencias que estavam faltando - erros de deploy corrigidos(só faltam os de aplicação ;))

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -52,7 +52,7 @@
 	
 	<listener>
         <listener-class>
-            org.apache.myfaces.extensions.cdi.openwebbeans.startup.WebBeansAwareConfigurationListener
+            org.apache.webbeans.servlet.WebBeansConfigurationListener
         </listener-class>
     </listener>
     
