--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 	
 	<resource-ref>
         <description>DB Connection</description>
-        <res-ref-name>java:comp/env/issueDS</res-ref-name>
+        <res-ref-name>jdbc/issuetracker</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
@@ -51,9 +51,7 @@
 	</context-param>
 	
 	<listener>
-        <listener-class>
-            org.apache.webbeans.servlet.WebBeansConfigurationListener
-        </listener-class>
+        <listener-class>org.apache.webbeans.servlet.WebBeansConfigurationListener</listener-class>
     </listener>
     
 	
