--- a/.classpath
+++ b/.classpath
@@ -11,7 +11,6 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/geronimo-jcdi_1.0_spec-1.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/myfaces-api-2.1.7.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/myfaces-extcdi-bundle-jsf20-1.0.5.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/primefaces-3.3.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/openwebbeans-impl-1.1.4.jar"/>
@@ -27,6 +26,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jboss-transaction-api_1.1_spec-1.0.0.Final.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hibernate-entitymanager-4.1.4.Final.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/postgresql-9.1-901.jdbc4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.faces-2.1.7.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-6-openjdk">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
