--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -6,20 +6,21 @@
 	
 	<display-name>issuetracker</display-name>
 	
+	<!-- configuração banco -->
 	<resource-ref>
         <description>DB Connection</description>
         <res-ref-name>jdbc/issuetracker</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
+    
+    <!-- habilita bean manager para o tomcat -->
+    <resource-env-ref>
+        <resource-env-ref-name>IntegrationBeanManager</resource-env-ref-name>
+        <resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
+    </resource-env-ref>
+    
 
-	<context-param>
-		<param-name>javax.faces.CONFIG_FILES</param-name>
-		<param-value>
-			/WEB-INF/faces-config.xml
-		</param-value>
-	</context-param>
-	
 	<!--
 		* Valid values are “Development”, “UnitTest”, “SystemTest”, or “Production”,
 		  corresponding to the enum constants of the class javax.faces.application.ProjectStage;
@@ -53,9 +54,6 @@
 	<listener>
         <listener-class>org.apache.webbeans.servlet.WebBeansConfigurationListener</listener-class>
     </listener>
-     <listener>
-    <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
-  </listener>
     
 	
 	<!-- Faces Servlet -->
